--- a/index.html
+++ b/index.html
@@ -5,45 +5,11 @@
     <title>16</title>
 </head>
 <body>
-  <button id="step-btn" >Step</button>
-  <pre id="show"></pre>
-  <script src="./2023/16.js" type="module"></script>
+  <div id="show"></div>
+  <script src="./grid.js" type="module"></script>
   <script type="module">
-    document.querySelector('#step-btn').addEventListener('click', onStep)
-    import { getAdventOfCodeData, drawLines } from './utils.js';
-    import { part1Debug, Dirs } from './2023/16.js';
-    const data = await getAdventOfCodeData(2023, 16);
-    const lines = data.split('\n');
-    const { step, beams } = part1Debug(lines);
-    let localBeams = beams;
-    function getLinesMarkup() {
-      return drawLines(lines, (ch, x, y) => {
-        const beam = localBeams.find(b => b.coord[0] == x && b.coord[1] == y);
-        let result = '';
-        if (beam) {
-          result = Dirs[beam.dir];
-        } else {
-          result = ch;
-        }
-        if (x == 0) {
-          return y + result;
-        }
-        return result;
-      });
-    }
-    let markup = getLinesMarkup();
-    document.querySelector('#show').innerHTML = markup;
-    function onStep() {
-      const res = step();
-      localBeams = res.beams;
-      markup = getLinesMarkup();
-      document.querySelector('#show').innerHTML = markup;
-    }
-    addEventListener("keydown", (event) => {
-      if (event.key == 'Enter') {
-        onStep();
-      }
-    });
+    import { createHtmlGrid } from './grid.js';
+    document.querySelector('#show').innerHTML = createHtmlGrid({width: 100, height: 100});
   </script>
 </body>
 </html>
