--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>16</title>
+    <style>
+      #show {
+      }
+    </style>
 </head>
 <body>
-  <div id="show"></div>
+  <div style="display: flex; justify-content: center; margin-top: 50px;">
+    <div id="show"></div>
+    </div>
   <script src="./grid.js" type="module"></script>
   <script type="module">
     import { createHtmlGrid } from './grid.js';
-    document.querySelector('#show').innerHTML = createHtmlGrid({width: 100, height: 100});
+    createHtmlGrid({
+      divId: 'show',
+      width: 30,
+      height: 8,
+      onCellClick: (x, y) => console.log(x, y)
+    });
   </script>
 </body>
 </html>
